fix status flex on small screen

--- a/app/assets/stylesheets/pages/_bookings_index.scss
+++ b/app/assets/stylesheets/pages/_bookings_index.scss
@@ -35,3 +35,24 @@
     min-width: 100%;
   }
 }
+
+.booking-title-status-container {
+  display: flex;
+  align-items: center;
+
+  .badge {
+    margin-left: 16px;
+  }
+
+  @media (max-width: 576px) {
+    flex-direction: column;
+    align-items: flex-start;
+    .card-title {
+      order: 2;
+    }
+    .badge {
+      order: 1;
+      margin-left: 0;
+    }
+  }
+}
